# qt5_bcalc_cmake

./: .gitignore  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  README.md  main.cpp  main_window.cpp  main_window.hpp
